# pineapple-calendar

./: CMakeLists.txt  README.md  README.zh_CN.md  README_zh_CN.md  main.cpp  mainwindow.cpp  pabstructcalendar.cpp  pchinesecalendar.cpp
app/: CMakeLists.txt  main.cpp  main.qml  mainwindow.cpp  pabstructcalendar.cpp  pabstructcalendar.h  pchinesecalendar.cpp  pchinesecalendar.h  pgregoriancalendar.cpp  picucalendar_p.cpp  picucalendar_p.h  qml.qrc
app/calendar/: DayDelegate.qml  DaysCalendar.qml  MonthView.qml
app/declarativeimports/net/blumia/pineapple/calendar/: CMakeLists.txt  calendar.cpp  calendarplugin.cpp  eventpluginsmanager.cpp  qmldir
declarativeimports/: CMakeLists.txt
declarativeimports/net/blumia/calendar/: CMakeLists.txt  calendarutils.cpp  calendarutils.h  calendarutilsplugin.cpp  calendarutilsplugin.h  qmldir
lib/: CMakeLists.txt  pabstructcalendar.cpp  pchinesecalendar.cpp  pgregoriancalendar.h  picucalendar_p.cpp  picucalendar_p.h
plasmoid/: CMakeLists.txt  calendar.cpp  calendar.h
plasmoid/package/: metadata.desktop
plasmoid/package/contents/config/: config.qml  main.xml
plasmoid/package/contents/images/: pairs.svgz
plasmoid/package/contents/ui/: CalendarView.qml  CompactRepresentation.qml  FullRepresentation.qml  configCalendar.qml  configGeneral.qml  configTimeZones.qml  main.qml
plasmoid/package/contents/ui/calendar/: DayDelegate.qml
test/: CMakeLists.txt  tst_lunarcalendar.cpp
